--- a/app-ui/package.json
+++ b/app-ui/package.json
@@ -22,8 +22,7 @@
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2",
-    "font-awesome": "~4.7.0",
-    "jquery": "^3.5.0"
+    "font-awesome": "~4.7.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.6",
